<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/setControl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundTwo">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >


        <LinearLayout
            android:id="@+id/buttonForm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="70dp"
            android:orientation="vertical"
            android:visibility="gone">

            <customfonts.MyEditText
                android:id="@+id/vName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginEnd="35dp"
                android:background="#0000"
                android:hint="@string/name_for_text_button"
                android:inputType="text"
                android:padding="16dp"
                android:textColor="@color/textColor"
                android:textColorHint="@color/hintColor"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:background="#ADCCE2" />

            <com.jaredrummler.materialspinner.MaterialSpinner
                android:id="@+id/buttonPinNo"
                android:layout_width="304dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:background="@color/cardview_shadow_end_color"
                android:entries="@color/cardview_light_background"
                app:ms_background_color="@color/backgroundTwo"
                app:ms_text_color="@color/backGround" />

            <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:background="#ADCCE2" />

            <TextView
                android:id="@+id/submitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/angle"
                android:backgroundTint="@color/backGround"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/submit"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/switchForm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="70dp"
            android:orientation="vertical"
            android:visibility="gone">

            <customfonts.MyEditText
                android:id="@+id/vsName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginEnd="35dp"
                android:background="#0000"
                android:hint="@string/name_for_switch"
                android:inputType="text"
                android:padding="16dp"
                android:textColor="#ADCCE2"
                android:textColorHint="#ADCCE2"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:background="#ADCCE2" />

            <com.jaredrummler.materialspinner.MaterialSpinner
                android:id="@+id/switchPinNo"
                android:layout_width="304dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:entries="@color/cardview_light_background"
                app:ms_background_color="@color/backgroundTwo"
                app:ms_text_color="@color/backGround" />

            <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:background="#ADCCE2" />

            <customfonts.MyTextView
                android:id="@+id/submitSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/angle"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/submit"
                android:textColor="@color/backGround"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/seekForm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="70dp"
            android:orientation="vertical"
            android:visibility="gone">

            <customfonts.MyEditText
                android:id="@+id/vsName2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginEnd="35dp"
                android:background="#0000"
                android:hint="@string/name_for_seekbar"
                android:inputType="text"
                android:padding="16dp"
                android:textColor="#ADCCE2"
                android:textColorHint="#ADCCE2"
                android:textSize="16sp" />

            <View
                android:id="@+id/view4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:background="#ADCCE2" />

            <com.jaredrummler.materialspinner.MaterialSpinner
                android:id="@+id/seekPinNo"
                android:layout_width="304dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:background="@color/cardview_shadow_end_color"
                android:entries="@color/cardview_light_background"
                app:ms_background_color="@color/backgroundTwo"
                app:ms_text_color="@color/backGround" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:background="#ADCCE2" />

            <customfonts.MyTextView
                android:id="@+id/submitSeek"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/angle"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/submit"
                android:textColor="#fff"
                android:textSize="16sp" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <RelativeLayout
                android:id="@+id/layoutTwo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="0dp"
                android:background="@color/backgroundTwo">


            </RelativeLayout>


        </FrameLayout>

        <TextView
            android:id="@+id/title2"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@color/black_overlay"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:padding="10dp"
            android:paddingEnd="40dp"
            android:text="@string/drag_here_to_remove"
            android:textColor="@color/backGround"
            android:textSize="25sp" />

        <customfonts.MyTextView
            android:id="@+id/bac2"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignBaseline="@+id/title2"
            android:layout_alignBottom="@+id/title2"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="11dp"
            android:background="@drawable/menuico"
            android:backgroundTint="@color/backGround"
            android:foregroundGravity="left"
            android:padding="16dp"
            android:textColor="@color/backGround"
            android:textSize="16sp"
            tools:background="@drawable/menuico" />

        <com.crystal.crystalpreloaders.widgets.CrystalPreloader
            android:id="@+id/loader"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            app:crs_pl_fg_color="@color/backGround"
            app:crs_pl_size="extra_large"
            app:crs_pl_style="expandable_balls" />
    </RelativeLayout>


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nc2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:background="@drawable/bg"
        android:backgroundTint="@color/common_google_signin_btn_text_light_default"
        android:theme="@style/NavigationTheme"
        app:itemTextColor="@color/backGround"

        app:menu="@menu/control">

    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>
